<resources>
    <string name="app_name">OpenMeters</string>

    <string name="ok">Ок</string>
    <string name="allow_camera_and_storage">Для использования камеры устройства необходимо дать разрешения</string>
    <string name="meter_history">История показаний</string>
    <string name="processing_result">Обрабатываем…</string>
    <string name="indicator_image">Изображение счетчика</string>
    <string name="meter_readings">Показание</string>
    <string name="serial_number">Серийный номер</string>
    <string name="to_confirm">Подтвердить</string>
    <string name="ready">Готово</string>

    <string name="left_arrow_button">Кнопка стрелки влево</string>
    <string name="all_ready">Все готово!</string>
    <string name="like">Палец вверх</string>
    <string name="meters_was_sent_to_bank">Показания обработаны и отправлены в банк.</string>
    <string name="go_to_history_of_meters">Перейти к истории показаний</string>
    <string name="meter_processing_error">Счётчик не распознан</string>

    <string name="capture_button">Кнопка съёмки</string>
    <string name="get_photo_button">Кнопка выбора изображения из галереи</string>
    <string name="flashlight_button">Кнопка фонарика</string>

    <string name="could_not_recognize">Не удалось распознать</string>
    <string name="could_not_recognize_try_again">Не удалось распознать показание счетчика, повторите попытку или введите в ручную</string>

    <string name="profile">Профиль</string>
    <string name="history">История показаний</string>
    <string name="error">Ошибка!</string>
    <string name="backend_error_happened">Произошла ошибка на стороне сервера. Попробуйте позднее</string>
    <string name="section_in_progress">Раздел находится в разработке</string>
    <string name="logo">Логотип</string>
    <string name="url">Local url (with http:// or https://)</string>
    <string name="enter_link_for_connection">Введите ссылку для подключения</string>
</resources>