<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <ImageView
            android:id="@+id/indicatorImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/indicator_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/leftArrowImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/left_arrow_button"
            android:padding="10dp"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/indicatorsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline"
            app:layout_constraintStart_toStartOf="parent"
            tools:itemCount="4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meterReadingsTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_text_input_layout_celestial"
            android:fontFamily="@font/graphic_regular"
            android:hint="@string/meter_readings"
            android:textColorHint="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@id/indicatorImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meterReadingsEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:fontFamily="@font/graphic_regular"
                android:inputType="number"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/meterReadingErrorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/graphic_regular"
            android:lineSpacingMultiplier="1.6"
            android:text="@string/could_not_recognize_try_again"
            android:textColor="@color/colorRed"
            android:textSize="12sp"
            android:visibility="gone"
            android:textColorHint="@color/colorRed"
            app:layout_constraintEnd_toEndOf="@id/meterReadingsTextInputLayout"
            app:layout_constraintStart_toStartOf="@id/meterReadingsTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/meterReadingsTextInputLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/serialNumberTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_text_input_layout_celestial"
            android:fontFamily="@font/graphic_regular"
            android:hint="@string/serial_number"
            app:layout_constraintTop_toBottomOf="@id/meterReadingErrorTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serialNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:fontFamily="@font/graphic_regular"
                android:inputType="number"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorLightBlue"
            android:fontFamily="@font/graphic_regular"
            android:text="@string/to_confirm"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/serialNumberTextInputLayout"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>